Fix nav bar z-index

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -20,7 +20,6 @@ nav {
   list-style-type: none;
   position: fixed;
   top: 0;
-  z-index: -9999;
   width: 100%;
   height: auto;
   background-color: transparent;
